Fix overlapping text in register page

--- a/src/components/register.css
+++ b/src/components/register.css
@@ -29,7 +29,7 @@
      width: 257px;
      height: 73.3px;
      position: relative;
-     top: 14px;
+     margin-top: 14px;
   
   }
   .Register__containerTop p{
